General alignment fixes in all views

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,12 @@ nav.navbar {
   padding: 0.5em;
 }
 
+body .navbar-expand-md > .container,
+body .navbar-expand-md > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 nav.navbar img {
   height: 3em;
   margin-left: 0;
